exps_new/LB_Route_APIs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /hello
          backend:
            serviceName: hello-service
            servicePort: 5678
        - path: /howdy
          backend:
            serviceName: howdy-service
            servicePort: 5678
